fix coloring for text in dark mode

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -119,6 +119,7 @@ html {
         }
 
         &.light {
+            color: #000;
             background-color: #fff;
 
             #title {
@@ -180,6 +181,7 @@ html {
         }
 
         &.dark {
+            color: #fff;
             background-color: #000;
 
             #title {
